Tweak protection modifiers
All 5 types now use wood as a base instead of obsidian, and charge fewer reinforcements in exchange for them costing more
Blast protection is now obisidian instead of emerald
Projectile protection is now iron instead of amethyst bronze
Reinforced is now emerald instead of iron
Projectile protection now grants a use item speed bonus instead of a visibility reduction

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -224,18 +224,18 @@
   "block.tconstruct.ender_slime_crystal_cluster": "Enderslime Crystal Cluster",
   "block.tconstruct.budding_ender_slime_crystal": "Budding Enderslime Crystal",
 
-  "item.tconstruct.iron_reinforcement": "Iron Reinforcement",
-  "item.tconstruct.iron_reinforcement.tooltip": "Reduces chance of a tool taking damage",
+  "item.tconstruct.emerald_reinforcement": "Emerald Reinforcement",
+  "item.tconstruct.emerald_reinforcement.tooltip": "Reduces chance of a tool taking damage",
   "item.tconstruct.slimesteel_reinforcement": "Slimesteel Reinforcement",
   "item.tconstruct.slimesteel_reinforcement.tooltip": "Increases slimesteel capacity",
   "item.tconstruct.seared_reinforcement": "Seared Reinforcement",
   "item.tconstruct.seared_reinforcement.tooltip": "Increases armor resistance against fire",
-  "item.tconstruct.bronze_reinforcement": "Amethyst Bronze Reinforcement",
-  "item.tconstruct.bronze_reinforcement.tooltip": "Increases armor resistance against projectiles",
+  "item.tconstruct.iron_reinforcement": "Iron Reinforcement",
+  "item.tconstruct.iron_reinforcement.tooltip": "Increases armor resistance against projectiles",
+  "item.tconstruct.obsidian_reinforcement": "Obsidian Reinforcement",
+  "item.tconstruct.obsidian_reinforcement.tooltip": "Increases armor resistance against explosions",
   "item.tconstruct.gold_reinforcement": "Gold Reinforcement",
   "item.tconstruct.gold_reinforcement.tooltip": "Increases armor resistance against magic",
-  "item.tconstruct.emerald_reinforcement": "Emerald Reinforcement",
-  "item.tconstruct.emerald_reinforcement.tooltip": "Increases armor resistance against explosions",
   "item.tconstruct.cobalt_reinforcement": "Cobalt Reinforcement",
   "item.tconstruct.cobalt_reinforcement.tooltip": "Increases armor resistance against general attacks",
   "item.tconstruct.jeweled_apple": "Jeweled Apple",
