Add armor material traits
New traits:
* Copper boosts protection at low depths, granting 5% protection per level at mid range for a total of 40% on the full set
* Gold grants magic protection and golden
* Iron grants projectile protection
* Seared stone grants fire protection
* Scorcehd stone grants 5% protection per level against fire immune mobs (which is most nether mobs)
* Obsidian grants blast protection
* Amethyst Bronze grants an attack speed bonus, at the cost of making your personal knockback axis aligned (not a huge cost but might be funny)
* Pig iron eats armor when attacked, and uses a fixed 0.4 saturation instad of scaling it by the modifier level for all eating
* Cobalt grants melee protection
* Hepatizon boosts protection by 2.5% per level when hit, and 5% per level when hit twice consecutively for a total for 40% on the full set
* Manyullyn boosts melee damage by 1 when hit, capping at the total level of insatiable
* Ancient hide grants +1 defense slot per level

API and internal stuff
* Added slot in charge module, implements the code previously in springy
* ToolType is an enum for dealing with modifiers that change behavior based on tool type
* Moved ricochet logic to ModifierEvents, share that event with Crystalbound

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -1982,6 +1982,10 @@
   "modifier.tconstruct.fire_protection.flavor": "Become the smeltery!",
   "modifier.tconstruct.fire_protection.description": "Protects against damage from fire and reduces fire time",
   "modifier.tconstruct.fire_protection.resistance": "Fire Resistance",
+  "modifier.tconstruct.scorch_protection": "Scorch Protection",
+  "modifier.tconstruct.scorch_protection.flavor": "Become the foundry!",
+  "modifier.tconstruct.scorch_protection.description": "Protects against damage from fire immune mobs and reduces fire time",
+  "modifier.tconstruct.scorch_protection.resistance": "Scorch Resistance",
   "modifier.tconstruct.blast_protection": "Blast Protection",
   "modifier.tconstruct.blast_protection.flavor": "Aw man!",
   "modifier.tconstruct.blast_protection.description": "Protects against explosion damage and reduces knockback from explosions",
@@ -2335,6 +2339,7 @@
   "modifier.tconstruct.dwarven.description": "Tool mines faster and has more projectile velocity the deeper you mine",
   "modifier.tconstruct.dwarven.mining_speed": "Depth Mining",
   "modifier.tconstruct.dwarven.velocity": "Depth Velocity",
+  "modifier.tconstruct.dwarven.resistance": "Depth Resistance",
   "modifier.tconstruct.overgrowth": "Overgrowth",
   "modifier.tconstruct.overgrowth.flavor": "Fungal!",
   "modifier.tconstruct.overgrowth.description": "Tool slowly grows overslime",
@@ -2351,6 +2356,9 @@
   "modifier.tconstruct.enhanced": "Enhanced",
   "modifier.tconstruct.enhanced.flavor": "Flashy!",
   "modifier.tconstruct.enhanced.description": "Rose gold goes great with a bonus upgrade!",
+  "modifier.tconstruct.fortified": "Fortified",
+  "modifier.tconstruct.fortified.flavor": "Fortunate!",
+  "modifier.tconstruct.fortified.description": "The ancient material leaves space for a bonus defense slot!",
   "modifier.tconstruct.airborne": "Airborne",
   "modifier.tconstruct.airborne.flavor": "Take to the skies!",
   "modifier.tconstruct.airborne.description": "Tool no longer is penalized when mining in the air and gains a projectile accuracy bonus",
@@ -2386,8 +2394,9 @@
   "modifier.tconstruct.overlord.description": "Tool takes some of the durability as new overslime subjects",
   "modifier.tconstruct.momentum": "Momentum",
   "modifier.tconstruct.momentum.flavor": "Not Fast Enough, Gotta Go Faster!",
-  "modifier.tconstruct.momentum.description": "Mining blocks and firing arrows increases your speed, as long as you keep going",
+  "modifier.tconstruct.momentum.description": "Mining blocks and firing arrows increases your speed, while armor damage boosts your protection, as long as you keep going",
   "modifier.tconstruct.momentum.speed": "Momentum Speed",
+  "modifier.tconstruct.momentum.resistance": "Momentum Resistance",
   "modifier.tconstruct.insatiable": "Insatiable",
   "modifier.tconstruct.insatiable.flavor": "Taste For Blood!",
   "modifier.tconstruct.insatiable.description": "During combat you deal more and more damage every time you hit an enemy",
@@ -2562,10 +2571,12 @@
   "effect.tconstruct.magnetic": "Magnetic",
   "effect.tconstruct.pierce": "Pierced",
   "effect.tconstruct.repulsive": "Repulsive",
-  "effect.tconstruct.momentum": "Momentum",
+  "effect.tconstruct.momentum_harvest": "Momentum",
   "effect.tconstruct.momentum_ranged": "Momentum",
-  "effect.tconstruct.insatiable": "Insatiable",
+  "effect.tconstruct.momentum_armor": "Momentum",
+  "effect.tconstruct.insatiable_melee": "Insatiable",
   "effect.tconstruct.insatiable_ranged": "Insatiable",
+  "effect.tconstruct.insatiable_armor": "Insatiable",
   "effect.tconstruct.teleport_cooldown": "Teleport Cooldown",
   "effect.tconstruct.fireball_cooldown": "Fireball Cooldown",
   "effect.tconstruct.calcified": "Calcified",
