Adjust a few triggers and descriptions for armor traits
Tasty now triggers on any damage
Dwarven now grants protection only on armor, since that hook runs on held items
Momentum now boosts prot from any entity caused damage instead of just melee damage
Crystalbound now grants 2.5% attack speed per level instead of 5%
Updated book descriptions for all above traits

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -2338,7 +2338,7 @@
   "modifier.tconstruct.scorching.attack_damage": "Damage on Fire",
   "modifier.tconstruct.dwarven": "Dwarven",
   "modifier.tconstruct.dwarven.flavor": "Miner's Friend!",
-  "modifier.tconstruct.dwarven.description": "Tool mines faster and has more projectile velocity the deeper you mine",
+  "modifier.tconstruct.dwarven.description": "Armor has more protection and tool mines faster and has more projectile velocity the deeper you mine",
   "modifier.tconstruct.dwarven.mining_speed": "Depth Mining",
   "modifier.tconstruct.dwarven.velocity": "Depth Velocity",
   "modifier.tconstruct.dwarven.resistance": "Depth Resistance",
@@ -2379,7 +2379,7 @@
   "modifier.tconstruct.crumbling.mining_speed": "Crumbling Speed",
   "modifier.tconstruct.crystalbound": "Crystalbound",
   "modifier.tconstruct.crystalbound.flavor": "The way of the crystal is straight",
-  "modifier.tconstruct.crystalbound.description": "Tool gains bonus velocity, but arrow angle is restricted",
+  "modifier.tconstruct.crystalbound.description": "Bows gain bonus velocity, but arrow angle is restricted. Armor instead gains attack speed by restricting knockback angle",
   "modifier.tconstruct.lightweight": "Lightweight",
   "modifier.tconstruct.lightweight.flavor": "Like a Shardblade!",
   "modifier.tconstruct.lightweight.description": "Tool is incredibly light for its size, allowing you to attack, mine, and launch projectiles faster",
@@ -2401,7 +2401,7 @@
   "modifier.tconstruct.momentum.resistance": "Momentum Resistance",
   "modifier.tconstruct.insatiable": "Insatiable",
   "modifier.tconstruct.insatiable.flavor": "Taste For Blood!",
-  "modifier.tconstruct.insatiable.description": "During combat you deal more and more damage every time you hit an enemy",
+  "modifier.tconstruct.insatiable.description": "During combat you deal more and more damage every time you hit an enemy, or everytime your insatiable armor is hit",
   "modifier.tconstruct.insatiable.attack_damage": "Momentum Damage",
   "modifier.tconstruct.conducting": "Conducting",
   "modifier.tconstruct.conducting.flavor": "Thermodynamic!",
