Split various armor traits out from the held tool trait
Makes it more clear what is going on in the tooltip hints

Copper now has depth protection
Amethyst bronze has crystalstrike for armor, using the armor level module (for knockback weirdness) and the attributes module (for attack speed)
Manyullyn now has kinetic
Hepatizon now has recurrent protection
Blazewood now has flame barrier
Also migrated crystalbound to a module with the new restrict protection angle module
Includes a new method in hook provider to allow a module to add additional modules to the builder. Might be worth considering rethinking the default hooks as a resut of this new feature, they could actually use this hook directly to add themselves

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -1619,7 +1619,7 @@
   "material.tconstruct.manyullyn.flavor": "The metal that most Tinkers will never pronounce right. Also known as a star cutting material.",
   "material.tconstruct.manyullyn.encyclopedia": "Grants +2 damage per level after 8 consecutive hits",
   "material.tconstruct.manyullyn.ranged": "Arrows gain +1 damage per level (before velocity) after 8 consecutive arrow hits",
-  "material.tconstruct.manyullyn.armor": "Temporarily boosts melee damge by 1 after taking damage, capping at twice the total level",
+  "material.tconstruct.manyullyn.armor": "Temporarily boosts melee damge by 1 after taking damage, capping at the total level across all armor",
 
   "material.tconstruct.hepatizon": "Hepatizon",
   "material.tconstruct.hepatizon.flavor": "He-pa-ti-zon - boil it, mash it, put it in a stew.",
@@ -1640,7 +1640,7 @@
 
   "material.tconstruct.blazewood": "Blazewood",
   "material.tconstruct.blazewood.flavor": "The flame protects the flame",
-  "material.tconstruct.blazewood.encyclopedia": "Grants +1% protection against non-fire damage per second of fire, up to +15% from lava's 15 seconds. Bonus reduced by fire resistance.",
+  "material.tconstruct.blazewood.encyclopedia": "Grants +0.5% protection against non-fire damage per second of fire, up to +7.5% from lava's 15 seconds. Bonus reduced by fire resistance.",
 
   "material.tconstruct.soulsteel": "Soulsteel",
 
@@ -2353,10 +2353,13 @@
   "modifier.tconstruct.scorching.attack_damage": "Damage on Fire",
   "modifier.tconstruct.dwarven": "Dwarven",
   "modifier.tconstruct.dwarven.flavor": "Miner's Friend!",
-  "modifier.tconstruct.dwarven.description": "Armor has more protection and tool mines faster and has more projectile velocity the deeper you mine",
+  "modifier.tconstruct.dwarven.description": "Tool mines faster and has more projectile velocity the deeper you mine, but loses effectiveness if you go too high",
   "modifier.tconstruct.dwarven.mining_speed": "Depth Mining",
   "modifier.tconstruct.dwarven.velocity": "Depth Velocity",
-  "modifier.tconstruct.dwarven.resistance": "Depth Resistance",
+  "modifier.tconstruct.depth_protection": "Depth Protection",
+  "modifier.tconstruct.depth_protection.flavor": "Dwarven armor!",
+  "modifier.tconstruct.depth_protection.description": "Armor has more protection the deeper you mine, but loses effectiveness if you go too high",
+  "modifier.tconstruct.depth_protection.resistance": "Depth Resistance",
   "modifier.tconstruct.overgrowth": "Overgrowth",
   "modifier.tconstruct.overgrowth.flavor": "Fungal!",
   "modifier.tconstruct.overgrowth.description": "Tool slowly grows overslime",
@@ -2394,7 +2397,10 @@
   "modifier.tconstruct.crumbling.mining_speed": "Crumbling Speed",
   "modifier.tconstruct.crystalbound": "Crystalbound",
   "modifier.tconstruct.crystalbound.flavor": "The way of the crystal is straight",
-  "modifier.tconstruct.crystalbound.description": "Bows gain bonus velocity, but arrow angle is restricted. Armor instead gains attack speed by restricting knockback angle",
+  "modifier.tconstruct.crystalbound.description": "Bows gain bonus velocity, but arrow angle is restricted",
+  "modifier.tconstruct.crystalstrike": "Crystalstrike",
+  "modifier.tconstruct.crystalstrike.flavor": "Speed of the crystal comes at a cost",
+  "modifier.tconstruct.crystalstrike.description": "Armor instead gains attack speed by restricting knockback angle",
   "modifier.tconstruct.lightweight": "Lightweight",
   "modifier.tconstruct.lightweight.flavor": "Like a Shardblade!",
   "modifier.tconstruct.lightweight.description": "Tool is incredibly light for its size, allowing you to attack, mine, and launch projectiles faster",
@@ -2411,17 +2417,28 @@
   "modifier.tconstruct.overlord.description": "Tool takes some of the durability as new overslime subjects",
   "modifier.tconstruct.momentum": "Momentum",
   "modifier.tconstruct.momentum.flavor": "Not Fast Enough, Gotta Go Faster!",
-  "modifier.tconstruct.momentum.description": "Mining blocks and firing arrows increases your speed, while armor damage boosts your protection, as long as you keep going",
+  "modifier.tconstruct.momentum.description": "Mining blocks and firing arrows increases your speed, as long as you keep going",
   "modifier.tconstruct.momentum.speed": "Momentum Speed",
-  "modifier.tconstruct.momentum.resistance": "Momentum Resistance",
+  "modifier.tconstruct.recurrent_protection": "Recurrent Protection",
+  "modifier.tconstruct.recurrent_protection.flavor": "Won't fool me twice!",
+  "modifier.tconstruct.recurrent_protection.description": "Taking damage temporarily boosts your protection",
+  "modifier.tconstruct.recurrent_protection.resistance": "Recurrent Resistance",
   "modifier.tconstruct.insatiable": "Insatiable",
   "modifier.tconstruct.insatiable.flavor": "Taste For Blood!",
-  "modifier.tconstruct.insatiable.description": "During combat you deal more and more damage every time you hit an enemy, or everytime your insatiable armor is hit",
+  "modifier.tconstruct.insatiable.description": "During combat you deal more and more damage every time you hit an enemy",
   "modifier.tconstruct.insatiable.attack_damage": "Momentum Damage",
+  "modifier.tconstruct.kinetic": "Kinetic",
+  "modifier.tconstruct.kinetic.flavor": "No pain no gain!",
+  "modifier.tconstruct.kinetic.description": "During combat you deal more and more damage every time you take a hit",
+  "modifier.tconstruct.kinetic.attack_damage": "Kinetic Damage",
   "modifier.tconstruct.conducting": "Conducting",
   "modifier.tconstruct.conducting.flavor": "Thermodynamic!",
   "modifier.tconstruct.conducting.description": "Tool deals multiplied damage when you are on fire",
   "modifier.tconstruct.conducting.boost": "On-Fire Boost Max",
+  "modifier.tconstruct.flame_barrier": "Flame Barrier",
+  "modifier.tconstruct.flame_barrier.flavor": "Thermoshielding!",
+  "modifier.tconstruct.flame_barrier.description": "Increases protection while on fire",
+  "modifier.tconstruct.flame_barrier.resistance": "Barrier Resistance",
 
   "__comment": "Tier 5 Traits",
   "modifier.tconstruct.enderporting": "Enderporting",
@@ -2590,10 +2607,10 @@
   "effect.tconstruct.repulsive": "Repulsive",
   "effect.tconstruct.momentum_harvest": "Momentum",
   "effect.tconstruct.momentum_ranged": "Momentum",
-  "effect.tconstruct.momentum_armor": "Momentum",
+  "effect.tconstruct.momentum_armor": "Recurrent",
   "effect.tconstruct.insatiable_melee": "Insatiable",
   "effect.tconstruct.insatiable_ranged": "Insatiable",
-  "effect.tconstruct.insatiable_armor": "Insatiable",
+  "effect.tconstruct.insatiable_armor": "Kinetic",
   "effect.tconstruct.teleport_cooldown": "Teleport Cooldown",
   "effect.tconstruct.fireball_cooldown": "Fireball Cooldown",
   "effect.tconstruct.calcified": "Calcified",
