Let modifier recipes decide whether to check the total level or just the recipe level
Modifiers such as pathing, bouncy, etc. don't want to be added to a tool that starts with it as a trait.
While implementing this feature, discovered that most modifiers were accidently checking the total level instead of the recipe level (causing wrong behavior for things that are also traits like smite). The default for the new behavior has been set to recipe modifiers only to restore the 1.18 behavior

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -2846,8 +2846,10 @@
   "recipe.tconstruct.modifier.not_enough_slot": "Need at least 1 %s slot to add this modifier",
   "recipe.tconstruct.modifier.not_enough_slots": "Need at least %s %s slots to add this modifier",
   "recipe.tconstruct.modifier.validate_slots": "This change leaves the tool with too few %s slots",
-  "recipe.tconstruct.modifier.min_level": "This recipe requires the tool to have at least %s to apply",
-  "recipe.tconstruct.modifier.max_level": "%s level cannot be above %s",
+  "recipe.tconstruct.modifier.min_level": "This recipe requires the tool to have at least %s to apply (ignoring traits)",
+  "recipe.tconstruct.modifier.max_level": "%s level cannot be above %s (ignoring traits)",
+  "recipe.tconstruct.modifier.min_level.traits": "This recipe requires the tool to have at least %s to apply (including traits)",
+  "recipe.tconstruct.modifier.max_level.traits": "%s level cannot be above %s (including traits)",
 
   "recipe.tconstruct.tool_recycling": "Tool Recycling",
   "recipe.tconstruct.tool_recycling.info": "Select which part to salvage from this tool. There is a chance based on the tool's remaining durability to salvage a second part.",
