Update freezing and fiery descriptions

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -1872,7 +1872,7 @@
   "modifier.tconstruct.severing.description": "Potentially blasts heads or other parts of targets of melee right off!",
   "modifier.tconstruct.fiery": "Fiery",
   "modifier.tconstruct.fiery.flavor": "Infused with the fires of hell!",
-  "modifier.tconstruct.fiery.description": "Ignites targets of melee attacks and fired arrows",
+  "modifier.tconstruct.fiery.description": "Ignites targets of melee attacks, fired arrows, and counterattacks",
   "modifier.tconstruct.necrotic": "Necrotic",
   "modifier.tconstruct.necrotic.flavor": "Vampiric!",
   "modifier.tconstruct.necrotic.description": "Critical hits on enemies drains their life to heal you",
@@ -1950,7 +1950,7 @@
   "modifier.tconstruct.blindshot.description": "Decreases the accuracy of the weapon",
   "modifier.tconstruct.freezing": "Freezing",
   "modifier.tconstruct.freezing.flavor": "Alright, everyone. Chill!",
-  "modifier.tconstruct.freezing.description": "Causes arrows to freeze the target",
+  "modifier.tconstruct.freezing.description": "Causes melee attacks, fired arrows, and counterattacks to freeze the target",
   "modifier.tconstruct.bulk_quiver": "Bulk Quiver",
   "modifier.tconstruct.bulk_quiver.flavor": "Holding arrows is overrated",
   "modifier.tconstruct.bulk_quiver.description": "Allows the bow to pull arrows from its own inventory when you run out of arrows, access by sneaking and attacking",
